# cutlass

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/glm/: CMakeLists.txt
lib/glad/: glad.c
lib/glad/include/: glad.h
lib/stb/: stb_image.cpp
src/: GameState.cpp  GameState.h  common.h  cutlass.cpp  cutlass.h  main.cpp  shader.cpp  stb_image.cpp
src/gameobjects/: Camera.cpp  Camera.h  CollisionBox.cpp  CollisionBox.h  DebugTriangle.cpp  DebugTriangle.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  WorldClip.cpp  WorldClip.h
src/math/: Box.cpp  Box.h  Mathf.cpp  Mathf.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Transform.cpp  Transform.h
src/render/: ImRenderable.cpp  ImRenderable.h  Mesh.cpp  Mesh.h  Shader.h
src/shader/: basic.fragment.glsl  basic.vertex.glsl
